<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/ll_main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="#FFFFFF"
        android:padding="25dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@color/colorPrimary"
            android:padding="30dp"
            android:fontFamily="@font/armata"
            android:text="@string/app_name"/>
        <!-- Email -->
        <EditText
            android:id="@+id/user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/armata"
            android:padding="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textAlignment="textStart"
            android:textColor="@color/preto"
            android:textColorHint="@color/variant_2" />
        <!-- Password -->
        <EditText
            android:id="@+id/user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/armata"
            android:padding="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="textStart"
            android:textColor="@color/preto"
            android:textColorHint="@color/variant_2" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="25dp"
            android:orientation="horizontal">
            <!-- Login btn -->
            <Button
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_btn_custo"
                android:fontFamily="@font/armata"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:id="@+id/register_txt"
            android:text="@string/txt_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/register_btn"
            android:layout_marginStart="4dp"
            android:text="@string/register"
            android:textColor="@color/variant_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>